--- a/tdd/client/palindrome/package.json
+++ b/tdd/client/palindrome/package.json
@@ -7,20 +7,20 @@
     "test": "test"
   },
   "scripts": {
-    "test": "karma start --reporters clear-screen,dots,coverage"
+    "test": "karma start --reporters clear-screen,dots,coverage --single-run"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
-    "istanbul": "^0.4.4",
-    "karma": "^1.1.2",
+    "istanbul": "^0.4.5",
+    "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-clear-screen-reporter": "^1.0.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.1.1",
-    "mocha": "^3.0.1"
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.1.2"
   }
 }
